--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,7 +1,11 @@
 .selectedPage{
     font-weight: bold;
+    color: gold;
 }
-.box_pagination span{
+.pageNumber{
     cursor: pointer;
     margin: 5px;
+}
+.btn{
+    cursor: pointer;
 }
